--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi==0.100.0
-pydantic==2.0.3
+pydantic[email]==2.0.3
+pydantic-settings==2.0.2
 python-jose[cryptography]==3.3.0
 uvicorn==0.23.1
